--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Stiftstraße 19, 59065 Hamm <br> <br> info@kammerjaeger-wendland.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong>Fax:</strong> XXX<br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@kammerjaeger-wendland.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>   Klaus Wendland
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> Hugo-Schaal-Weg 2, 42651 Solingen <br> <br> info@kammerjaeger-graefe.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> XXX<br> <strong>Fax:</strong> XXX<br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@kammerjaeger-graefe.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>   Helmut Gräfe
   
   
   
